--- a/nuevo.html
+++ b/nuevo.html
@@ -6,14 +6,11 @@
 	<script type="text/javascript" src="js/jquery-1.9.1.min.js"></script>
 	<script type="text/javascript" src="js/avatares.js"></script>
 	<script type="text/javascript" src="js/nuevo.js"></script>
+	<link rel="stylesheet" type="text/css" media="screen" href="style.css" />
 </head>
 
 <body>
 <div id="NUEVO">
-	<div id="NUEVO-nombre">
-		ELIGE NOMBRE<br>
-		<input type="text" name="nombre">
-	</div>
 	<div id="NUEVO-personaje">
 		ELIGE PERSONAJE<br>
 		<input type="hidden" name="personaje">
