--- a/index.html
+++ b/index.html
@@ -40,11 +40,10 @@
 		});
 		function clickBoton() {
 			$.ajax({
-				url : 'http://manquehuito.cl/beta/test.php',
-				type: 'GET',
-				crossDomain: true,
-				cache: false,
-				data: {
+				url			: 'http://appsredon.cl/apps/sikaform/test.php',
+				type		: 'GET',
+				crossDomain	: true,
+				data		: {
 					waka : 'Waka'
 				}
 			}).done(function(txt) {
