--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
 	<meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width" />
 
 	<!-- This is a wide open CSP declaration. To lock this down for production, see below. -->
-	<meta http-equiv="Content-Security-Policy" content="default-src * 'unsafe-inline' gap:; style-src 'self' 'unsafe-inline'; media-src *" />
+	<meta http-equiv="Content-Security-Policy" content="default-src 'self' data: gap: 'unsafe-inline' https://ssl.gstatic.com; style-src 'self' 'unsafe-inline'; media-src *" />
 	<!-- Good default declaration:
+    <meta http-equiv="Content-Security-Policy" content="default-src * 'unsafe-inline' gap:; style-src 'self' 'unsafe-inline'; media-src *" />
 	* gap: is required only on iOS (when using UIWebView) and is needed for JS->native communication
 	* https://ssl.gstatic.com is required only on Android and is needed for TalkBack to function properly
 	* Disables use of eval() and inline scripts in order to mitigate risk of XSS vulnerabilities. To change this:
@@ -16,7 +17,7 @@
         * Enable eval(): add 'unsafe-eval' to default-src
     * Create your own at http://cspisawesome.com
 	-->
-	<!-- <meta http-equiv="Content-Security-Policy" content="default-src 'self' data: gap: 'unsafe-inline' https://ssl.gstatic.com; style-src 'self' 'unsafe-inline'; media-src *" /> -->
+	<!--  -->
 
 	<link rel="stylesheet" type="text/css" href="css/style.css" />
 	<title>Hola Mundo</title>
@@ -27,7 +28,7 @@
 		<div id="deviceready">
 			<!-- Contenido -->
 		</div>
-		<a href="javascript: clickBoton();" style="padding:10px; border:1px solid #FFF;">
+		<a id="boton" href="javascript: clickBoton();" style="padding:10px; border:1px solid #FFF;">
         	HOLA, SOY UN BOTON
 		</a>
 	</div>
@@ -38,17 +39,22 @@
 			alert('Hola Mundo');
 			$('#deviceready').html('Holi :)');
 		});
+		var activaBoton = true;
 		function clickBoton() {
-			$.ajax({
-				url			: 'http://appsredon.cl/apps/sikaform/test.php',
-				type		: 'GET',
-				crossDomain	: true,
-				data		: {
-					waka : 'Waka'
-				}
-			}).done(function(txt) {
-				alert(txt);
-			});
+			if (activaBoton) {
+				activaBoton = false;
+				$('#boton').html('Cargando...');
+				$.ajax({
+					url			: 'http://appsredon.cl/apps/sikaform/test.php',
+					type		: 'GET',
+					crossDomain	: true,
+					data		: {
+						waka : 'Waka'
+					}
+				}).done(function(txt) {
+					alert(txt);
+				});
+			}
 		}
 	</script>
 </body>
