--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<meta name="msapplication-tap-highlight" content="no" />
 	<meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width" />
 
-	<!-- This is a wide open CSP declaration. To lock this down for production, see below. -->
+	<!-- This is a wide open CSP declaration. To lock this down for production, see below. --
 	<meta http-equiv="Content-Security-Policy" content="default-src 'self' data: gap: 'unsafe-inline' https://ssl.gstatic.com; style-src 'self' 'unsafe-inline'; media-src *" />
 	<!-- Good default declaration:
     <meta http-equiv="Content-Security-Policy" content="default-src * 'unsafe-inline' gap:; style-src 'self' 'unsafe-inline'; media-src *" />
@@ -50,9 +50,14 @@
 					crossDomain	: true,
 					data		: {
 						waka : 'Waka'
+					},
+					error: function (xhr, ajaxOptions, thrownError) {
+						alert(xhr.status);
+						alert(thrownError);
 					}
 				}).done(function(txt) {
 					alert(txt);
+					$('#boton').html('EXITO');
 				});
 			}
 		}
