--- a/index.html
+++ b/index.html
@@ -6,19 +6,6 @@
 	<meta name="msapplication-tap-highlight" content="no" />
 	<meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width" />
 
-	<!-- This is a wide open CSP declaration. To lock this down for production, see below. --
-	<meta http-equiv="Content-Security-Policy" content="default-src 'self' data: gap: 'unsafe-inline' https://ssl.gstatic.com; style-src 'self' 'unsafe-inline'; media-src *" />
-	<!-- Good default declaration:
-    <meta http-equiv="Content-Security-Policy" content="default-src * 'unsafe-inline' gap:; style-src 'self' 'unsafe-inline'; media-src *" />
-	* gap: is required only on iOS (when using UIWebView) and is needed for JS->native communication
-	* https://ssl.gstatic.com is required only on Android and is needed for TalkBack to function properly
-	* Disables use of eval() and inline scripts in order to mitigate risk of XSS vulnerabilities. To change this:
-        * Enable inline JS: add 'unsafe-inline' to default-src
-        * Enable eval(): add 'unsafe-eval' to default-src
-    * Create your own at http://cspisawesome.com
-	-->
-	<!--  -->
-
 	<link rel="stylesheet" type="text/css" href="css/style.css" />
 	<title>Hola Mundo</title>
 </head>
@@ -28,7 +15,8 @@
 		<div id="deviceready">
 			<!-- Contenido -->
 		</div>
-		<a id="boton" href="javascript: clickBoton();" style="padding:10px; border:1px solid #FFF;">
+		<input type="text" name="waka" value="" />
+		<a id="boton" href="javascript: clickBoton2();" style="padding:10px; border:1px solid #FFF;">
         	HOLA, SOY UN BOTON
 		</a>
 	</div>
@@ -37,7 +25,12 @@
 	<script type="text/javascript">
 		$(document).ready(function(e) {
 			alert('Hola Mundo');
-			$('#deviceready').html('Holi :)');
+			var valorGuardado = window.localStorage.getItem("clave");
+			if (valorGuardado) {
+				$('#deviceready').html( valorGuardado );
+			} else {
+				$('#deviceready').html('Holi :)');
+			}
 		});
 		var activaBoton = true;
 		function clickBoton() {
@@ -59,6 +52,12 @@
 					alert(txt);
 					$('#boton').html('EXITO');
 				});
+			}
+		}
+		function clickBoton2() {
+			var texto = $('input[name="waka"]').val();
+			if (texto != '') {
+				window.localStorage.setItem("clave", texto);
 			}
 		}
 	</script>
