--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
 			} else {
 				$('#deviceready').html('Holi :)');
 			}
+			checkConnection();
 		});
 		var activaBoton = true;
 		function clickBoton() {
@@ -59,6 +60,18 @@
 			if (texto != '') {
 				window.localStorage.setItem("clave", texto);
 			}
+		}
+		function checkConnection() {
+			var networkState = navigator.network.connection.type;
+			var states = {};
+			states[Connection.UNKNOWN]  = 'Unknown connection';
+			states[Connection.ETHERNET] = 'Ethernet connection';
+			states[Connection.WIFI]     = 'WiFi connection';
+			states[Connection.CELL_2G]  = 'Cell 2G connection';
+			states[Connection.CELL_3G]  = 'Cell 3G connection';
+			states[Connection.CELL_4G]  = 'Cell 4G connection';
+			states[Connection.NONE]     = 'No network connection';
+			alert('Connection type: ' + states[networkState]);
 		}
 	</script>
 </body>
