--- a/index.html
+++ b/index.html
@@ -47,41 +47,69 @@
 		</div>
 		<div class="cartas">
 			<a class="btn-carta carta-1" href="javascript: clickCarta(1);">
-				<img class="back" src="sight/fondo.jpg" width="100%" height="100%" />
-				<img class="front" src="sight/fail.jpg" width="100%" />
+				<div class="front">
+					<img src="sight/fail.jpg" width="100%" />
+				</div>
+				<div class="back">
+					<img src="sight/fondo.jpg" width="100%" height="100%" />
+				</div>
 			</a>
 			<a class="btn-carta carta-2" href="javascript: clickCarta(2);">
-				<img class="back" src="sight/fondo.jpg" width="100%" height="100%" />
-				<img class="front" src="sight/fail.jpg" width="100%" />
+				<div class="front">
+					<img src="sight/fail.jpg" width="100%" />
+				</div>
+				<div class="back">
+					<img src="sight/fondo.jpg" width="100%" height="100%" />
+				</div>
 			</a>
 			<a class="btn-carta carta-3" href="javascript: clickCarta(3);">
-				<img class="back" src="sight/fondo.jpg" width="100%" height="100%" />
-				<img class="front" src="sight/fail.jpg" width="100%" />
+				<div class="front">
+					<img src="sight/fail.jpg" width="100%" />
+				</div>
+				<div class="back">
+					<img src="sight/fondo.jpg" width="100%" height="100%" />
+				</div>
 			</a>
 			<a class="btn-carta carta-4" href="javascript: clickCarta(4);">
-				<img class="back" src="sight/fondo.jpg" width="100%" height="100%" />
-				<img class="front" src="sight/fail.jpg" width="100%" />
+				<div class="front">
+					<img src="sight/fail.jpg" width="100%" />
+				</div>
+				<div class="back">
+					<img src="sight/fondo.jpg" width="100%" height="100%" />
+				</div>
 			</a>
 			<a class="btn-carta carta-5" href="javascript: clickCarta(5);">
-				<img class="back" src="sight/fondo.jpg" width="100%" height="100%" />
-				<img class="front" src="sight/fail.jpg" width="100%" />
+				<div class="front">
+					<img src="sight/fail.jpg" width="100%" />
+				</div>
+				<div class="back">
+					<img src="sight/fondo.jpg" width="100%" height="100%" />
+				</div>
 			</a>
 			<a class="btn-carta carta-6" href="javascript: clickCarta(6);">
-				<img class="back" src="sight/fondo.jpg" width="100%" height="100%" />
-				<img class="front" src="sight/fail.jpg" width="100%" />
+				<div class="front">
+					<img src="sight/fail.jpg" width="100%" />
+				</div>
+				<div class="back">
+					<img src="sight/fondo.jpg" width="100%" height="100%" />
+				</div>
 			</a>
 			<a class="btn-carta carta-7" href="javascript: clickCarta(7);">
-				<img class="back" src="sight/fondo.jpg" width="100%" height="100%" />
-				<img class="front" src="sight/fail.jpg" width="100%" />
+				<div class="front">
+					<img src="sight/fail.jpg" width="100%" />
+				</div>
+				<div class="back">
+					<img src="sight/fondo.jpg" width="100%" height="100%" />
+				</div>
 			</a>
 			<div class="final">Elige la carta que crees que es la correcta</div>
 			<div class="resultado">EXITO</div>
 		</div>
 	</div>
 	<script type="text/javascript" src="cordova.js"></script>
-	<script type="text/javascript" src="js/jquery-1.9.1.min.js"></script>
-	<script type="text/javascript">
-		
-	</script>
+	<script type="text/javascript" src="js/jquery-2.1.4.js"></script>
+	<script type="text/javascript" src="js/jquery.easing.1.3.js"></script>
+	<script type="text/javascript" src="js/jquery.flip.js"></script>
+	<script type="text/javascript" src="js/sight.js"></script>
 </body>
 </html>
