--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
 			<p>Debes girar tu celular para poder jugar.</p>
 		</div>
 		<div class="titulo">TEST YOUR SIGHT</div>
+
+		<!-- Niveles -->
 		<div class="nivel">
 			<a class="btn-nivel nivel-1 elige" href="javascript: clickNivel(1);">
             	<img src="sight/over-1.jpg" width="100%" />
@@ -45,6 +47,9 @@
 			</a>
 			<a class="boton" href="javascript: clickJugar();">PLAY</a>
 		</div>
+		<!-- FIN Niveles -->
+
+		<!-- Cartas -->
 		<div class="cartas">
 			<a class="btn-carta carta-1" href="javascript: clickCarta(1);">
 				<div class="front">
@@ -105,7 +110,10 @@
 			<div class="final">Elige la carta que crees que es la correcta</div>
 			<div class="resultado">EXITO</div>
 		</div>
+		<!-- FIN Cartas -->
+
 	</div>
+
 	<script type="text/javascript" src="cordova.js"></script>
 	<script type="text/javascript" src="js/jquery-2.1.4.js"></script>
 	<script type="text/javascript" src="js/jquery.easing.1.3.js"></script>
